# docker-monitor

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yaml  publish-image.yaml
docker_health_alerts/: __init__.py  __main__.py  alerts.py  cli.py  config.py  delivery.py  docker_source.py  filters.py  plugins.py  reconciliation.py  routing.py  state.py
docker_monitor/: __init__.py  __main__.py  config.py  docker_source.py  filters.py  plugins.py  routing.py  state.py
docker_monitor/receivers/: __init__.py
docs/: architecture.md  configuration.md  implementation_plan.md  operations.md  plugin_contract.md  release.md  requirements.md  security.md  task_acceptance_criteria.md  task_tracker.md  tech_stack.md  testing.md  vision.md
docs/tasks/: 0001-project-scaffold-and-tooling.md  0002-configuration-model-and-validation.md  0003-alert-model-redaction-and-normalization.md  0004-monitor-filtering-and-health-state-tracking.md  0005-docker-source-adapter-and-startup-reconciliation.md  0006-routing-delivery-coordination-and-retries.md  0007-generic-webhook-plugin.md  0008-discord-plugin.md  0009-runtime-loop-reconnects-shutdown-and-healthcheck.md  (+2 more)
examples/: README.md  compose.yaml  config.yaml
examples/secrets/: raw_webhook_url
tests/: test_alerts.py  test_cli.py  test_config.py  test_delivery.py  test_discord.py  test_docker_source.py  test_filters.py  test_generic_webhook.py  test_github_workflows.py  test_plugins.py  test_reconciliation.py  test_routing.py  test_runtime.py  test_state.py
(+15 files in other folders)
